@@ -3,6 +3,12 @@
 	Backport from mainline
 	2010-12-10  Jakub Jelinek  <jakub@redhat.com>
 
+	PR rtl-optimization/46804
+	* regmove.c (optimize_reg_copy_3): Look for REG_EQUAL note
+	on the setter of src_reg rather than on insn.  If it is
+	equal to the setter's original SET_SRC, replace it with its
+	zero or sign extension instead of dropping it.
+
 	PR rtl-optimization/46865
 	* rtl.c (rtx_equal_p_cb, rtx_equal_p): For last operand of
 	ASM_OPERANDS and ASM_INPUT if integers are different,
